--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
 body{
     margin: 0%;
     background-color: #1F2937;    
-    
+    min-height: 100vh;
 }
-.add-modal{
+#modal{
     visibility:hidden;
-    position: absolute  ;
-    z-index: 1;
-    top: 30%;
-    right: 40%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -19,6 +19,7 @@ body{
     font-size: 20px;
     background-color: #6E7888;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border: 1px solid #1F2937;
 }
 input{
     border-radius:10px ;
@@ -39,7 +40,7 @@ input:focus{
     margin: 12px 0px;
     
 }
-.add-modal > button{
+form > button{
     width: 120px;
     height: 40px;
     border-radius: 10px;
@@ -50,7 +51,7 @@ input:focus{
     position: relative;
     right: -90px;
 }
-.add-modal > button:hover{
+form > button:hover{
     background-color: #96ADCF;
     color: #1F2937;
 }
@@ -122,6 +123,7 @@ form{
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
 
+
 }
 .card{
     background-color: #6E7888;
@@ -135,8 +137,10 @@ form{
     align-items: center;
     border-radius: 12px;
     margin: 12px;
+    box-shadow: 0px 4px 8px rgb(0,0,0,.5);
+    margin-bottom: 30px;
 }
-#del,#read{
+#del,#rread{
     background-color: #1F2937;
     height: 40px;
     width: 250px;
@@ -148,7 +152,7 @@ form{
     background-color:crimson;
     border-color: crimson;
 }
-#read:hover{
+#rread:hover{
     background-color: #96ADCF;
     color: #1F2937;
 }
